--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "apexcharts": "^3.45.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
+    "lucide-react": "^0.438.0",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
