--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.438.0",
     "next": "^14.2.4",
     "next-client-cookies": "^1.1.1",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
